--- a/index-it.html
+++ b/index-it.html
@@ -27,11 +27,11 @@
             <img src="./Images/WS.png" alt="HeadLogo" />
           </div>
           <div class="menu-list">
-            <a href="index.html">HOME</a>
-            <a href="#about">CHI SIAMO</a>
-            <a href="#company">OBIETTIVO AZIENDALE</a>
-            <a href="#project">PROGETTI IN CORSO</a>
-            <a href="#contact">CONTATTI</a>
+            <a href="index-it.html">Home</a>
+            <a href="#about">Chi Siamo</a>
+            <a href="#company">Obiettivo Aziendale</a>
+            <a href="#project">Progetti In Corso</a>
+            <a href="#contact">Contatti</a>
           </div>
           <div class="menu-button">
             <a href="index.html"><i class="bi bi-globe2"></i> ITALY</a>
@@ -47,7 +47,8 @@
       <div class="about-section" id="about">
         <img src="./Images/AU.jpg" alt="About" class="about-img" />
         <div class="about-content">
-          <h1>CHI SIAMO</h1>
+          <h1>Chi Siamo</h1>
+          <span class="line"></span>
           <p>
             We Sport è una società che mira a generare rendimenti annualizzati
             attraverso una politica di investimento attenta e mirata. Il nostro
@@ -78,7 +79,8 @@
       </div>
       <div class="company-section" id="company">
         <div class="company-left">
-          <h1>OBIETTIVO AZIENDALE</h1>
+          <h1>Obiettivo Aziendale</h1>
+          <span class="line"></span>
           <p>
             Siamo convinti che la combinazione di una solida politica di
             investimento e di un'infrastruttura tecnologica all'avanguardia ci
@@ -95,7 +97,7 @@
       </div>
       <div class="double-section">
         <div class="project-section" id="project">
-          <h1>PROGETTI IN CORSO</h1>
+          <h1>Progetti In Corso</h1>
           <ul>
             <li>
               <a href="https://www.google.com/search?q=albiate+padel/"
@@ -115,7 +117,7 @@
           <img src="./Images/WSLogoW.png" alt="WS" />
         </div>
         <div class="contact-section" id="contact">
-          <h1>CONTATTI</h1>
+          <h1>Contatti</h1>
           <ul>
             <li><p>WE SPORT SRL</p></li>
             <li><p>VIA TORRI BIANCHE 3</p></li>
