--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <img src="./Images/WS.png" alt="HeadLogo" />
           </div>
           <div class="menu-list">
-            <a href="index.html">HOME</a>
-            <a href="#about">ABOUT</a>
-            <a href="#company">COMPANY TARGET</a>
-            <a href="#project">PROJECT ON DEVELOPMENT</a>
-            <a href="#contact">CONTACT Us</a>
+            <a href="index.html">Home</a>
+            <a href="#about">About</a>
+            <a href="#company">Company Target</a>
+            <a href="#project">Project On Development</a>
+            <a href="#contact">Contact Us</a>
           </div>
           <div class="menu-button">
             <a href="index-it.html"><i class="bi bi-globe2"></i> ENGLISH</a>
@@ -47,7 +47,8 @@
       <div class="about-section" id="about">
         <img src="./Images/AU.jpg" alt="About" class="about-img" />
         <div class="about-content">
-          <h1>ABOUT US</h1>
+          <h1>About Us</h1>
+          <span class="line"></span>
           <p>
             We Sport is a company aiming to generate annualized returns through
             a careful and targeted investment policy. Our goal is to provide our
@@ -76,7 +77,8 @@
       </div>
       <div class="company-section" id="company">
         <div class="company-left">
-          <h1>COMPANY TARGET</h1>
+          <h1>Company Target</h1>
+          <span class="line"></span>
           <p>
             We are confident that the combination of a strong investment policy
             and state-of-the-art technological infrastructure will enable us to
@@ -92,7 +94,7 @@
       </div>
       <div class="double-section">
         <div class="project-section" id="project">
-          <h1>PROJECT ON DEVELOPMENT</h1>
+          <h1>Project On Development</h1>
           <ul>
             <li>
               <a href="https://www.google.com/search?q=albiate+padel"
@@ -112,7 +114,7 @@
           <img src="./Images/WSLogoW.png" alt="WS" />
         </div>
         <div class="contact-section" id="contact">
-          <h1>CONTACT US</h1>
+          <h1>Contact Us</h1>
           <ul>
             <li><p>WE SPORT SRL</p></li>
             <li><p>VIA TORRI BIANCHE 3</p></li>
