--- a/index-it.html
+++ b/index-it.html
@@ -67,11 +67,10 @@
             qualità.
           </p>
         </div>
-        <img src="./Images/WSLogoW.png" alt="About" class="icon1" />
         <img src="./Images/WSLogo.png" alt="About" class="icon2" />
       </div>
       <div class="quote-section">
-        <img src="./Images/Quote.jpg" alt="Quote" />
+        <img src="./Images/Quote.webp" alt="Quote" />
         <h1>
           PADEL is the perfect combination of violent action taking place in a
           very calm atmosphere
@@ -86,49 +85,46 @@
             investimento e di un'infrastruttura tecnologica all'avanguardia ci
             consentirà di raggiungere i nostri obiettivi di crescita e di
             soddisfare al meglio le esigenze dei nostri clienti. La nostra
-            missione è quella di diventare un punto di riferimento nel settore del
-            Padel in Italia, offrendo servizi innovativi, affidabili e di alta
-            qualità.
+            missione è quella di diventare un punto di riferimento nel settore
+            del Padel in Italia, offrendo servizi innovativi, affidabili e di
+            alta qualità.
           </p>
         </div>
         <div class="company-right">
-          <img src="./Images/CT.jpg" alt="Company">
+          <img src="./Images/CT.jpg" alt="Company" />
         </div>
       </div>
-      <div class="double-section">
-        <div class="project-section" id="project">
-          <h1>Progetti In Corso</h1>
-          <ul>
-            <li>
-              <a href="https://www.google.com/search?q=albiate+padel/"
-                >ALBIATE</a
-              >
-            </li>
-            <li>
-              <a href="https://www.google.com/search?q=alzano+lombardo+padel"
-                >ALZANO LOMBARDO</a
-              >
-            </li>
-            <li>
-              <a href="https://www.google.com/search?q=omegna+padel">OMEGNA</a>
-            </li>
-            <li><a href="https://www.letspadel.it/">ORSENIGO</a></li>
-          </ul>
-          <img src="./Images/WSLogoW.png" alt="WS" />
-        </div>
-        <div class="contact-section" id="contact">
-          <h1>Contatti</h1>
-          <ul>
-            <li><p>WE SPORT SRL</p></li>
-            <li><p>VIA TORRI BIANCHE 3</p></li>
-            <li><p>20871 - VIMERCATE (MB)</p></li>
-            <li><p>CS 10.000,00 IV</p></li>
-            <li><p>CF/PI 12695350962</p></li>
-            <li><p>AMMINISTRAZIONE@WESPORTSRL.IT</p></li>
-            <li><p>WESPORTSRL@PEC.IT</p></li>
-          </ul>
-          <img src="./Images/WSLogoW.png" alt="WS" />
-        </div>
+      <div class="project-section" id="project">
+        <h1>Progetti In Corso</h1>
+        <ul>
+          <li>
+            <a href="https://www.google.com/search?q=albiate+padel/">ALBIATE</a>
+          </li>
+          <li>
+            <a href="https://www.google.com/search?q=alzano+lombardo+padel"
+              >ALZANO LOMBARDO</a
+            >
+          </li>
+          <li>
+            <a href="https://www.google.com/search?q=omegna+padel">OMEGNA</a>
+          </li>
+          <li><a href="https://www.letspadel.it/">ORSENIGO</a></li>
+        </ul>
+        <img class="icon1" src="./Images/WSLogo.png" alt="WS" />
+        <img class="icon2" src="./Images/WSLogo.png" alt="WS" />
+      </div>
+      <div class="contact-section" id="contact">
+        <h1>Contatti</h1>
+        <ul>
+          <li><p>WE Sport Srl</p></li>
+          <li><p>Via Torri Bianche 3</p></li>
+          <li><p>20871 - Vimercate (Mb)</p></li>
+          <li><p>CS 10.000,00 iv</p></li>
+          <li><p>CF/PI 12695350962</p></li>
+          <li><p>amministrazione@wesportsrl.it</p></li>
+          <li><p>wesportsrl@pec.it</p></li>
+        </ul>
+        <img src="./Images/WSLogoW.png" alt="WS" />
       </div>
       <footer>
         <div class="top-section">
