--- a/index-it.html
+++ b/index-it.html
@@ -116,7 +116,7 @@
       <div class="contact-section" id="contact">
         <h1>Contatti</h1>
         <ul>
-          <li><p>WE Sport Srl</p></li>
+          <li><p>We sport Srl</p></li>
           <li><p>Via Torri Bianche 3</p></li>
           <li><p>20871 - Vimercate (Mb)</p></li>
           <li><p>CS 10.000,00 iv</p></li>
